Update Cleaning gene expression data.ipynb

--- a/Cleaning & merging data/Cleaning gene expression data.ipynb
+++ b/Cleaning & merging data/Cleaning gene expression data.ipynb
@@ -12,7 +12,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## The following step only works in RStudio. If working in another environment, please set the working directory properly and check with input 3 if the working directory is correct. "
+    "## The following step only works in RStudio. If working in another environment, please set the working directory properly and check if the working directory is correct!"
    ]
   },
   {
